tests/snapshots/examples_fixtures/functions__test_undefined_variable_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/test_undefined_variable_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `c`.

  examples/functions/test_undefined_variable_error.flx:3:1
  |
3 | c = 10;
  | ^^^^^^^

Hint:
  Define it first: let c = ...;
== stdout ==
<not executed>
